// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control Error Object 1`] = `
Array [
  Object {
    "data": Object {
      "err": Object {
        "debug": "wooyeah",
        "message": "hallo",
        "name": "Error",
        "stack": "Error: hallo
    at Object.<anonymous> (~/logger/__tests__/control.test.ts:22:32)",
      },
    },
    "err": [Error: hallo],
    "level": 50,
    "msg": "hallo",
    "time": 2009-02-13T23:31:30.000Z,
  },
]
`;

exports[`Control Error Object serialized on non-error level 1`] = `
Array [
  Object {
    "data": Object {
      "err": Object {
        "message": "hallo",
        "name": "Error",
        "stack": "Error: hallo
    at Object.<anonymous> (~/logger/__tests__/control.test.ts:30:17)
    at processTicksAndRejections (node:internal/process/task_queues:~:~)",
      },
    },
    "err": [Error: hallo],
    "level": 30,
    "msg": "hallo",
    "time": 2009-02-13T23:31:30.000Z,
  },
]
`;
